--- a/style/scss/sections/_payments.scss
+++ b/style/scss/sections/_payments.scss
@@ -21,7 +21,7 @@
 	}
 
 	&__container {
-		padding: $spacing-none-desktop $spacing-xxxl-desktop 246px;
+		padding-bottom: 246px;
 		display: flex;
 		flex-direction: column;
 		gap: $spacing-xl-desktop;
