--- a/style/scss/base/_base.scss
+++ b/style/scss/base/_base.scss
@@ -18,7 +18,8 @@ body {
 	overflow-x: hidden;
 }
 
-body.is-menu-open, body.is-locked {
+body.is-menu-open,
+body.is-locked {
 	overflow: hidden;
 }
 
@@ -78,8 +79,34 @@ h6 {
 	font-size: $heading-6-desktop;
 }
 
-// Глобальный стиль выделения текста
 ::selection {
 	background: $primary;
 	color: $text-inverse;
+}
+
+input:focus::placeholder,
+textarea:focus::placeholder {
+	color: transparent;
+}
+
+input:focus::-webkit-input-placeholder,
+textarea:focus::-webkit-input-placeholder {
+	color: transparent;
+}
+
+input:focus::-moz-placeholder,
+textarea:focus::-moz-placeholder {
+	color: transparent;
+}
+
+input::placeholder,
+textarea::placeholder {
+	color: #0c1625;
+}
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 40px;
 }
