--- a/style/scss/sections/_vacancies.scss
+++ b/style/scss/sections/_vacancies.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	background-image: url('../../image/vacancies/background.webp');
 	background-size: cover;
-	background-position: center;
+	background-position: top center;
 	background-repeat: no-repeat;
 	padding-top: $spacing-xxxl-desktop;
 	padding-bottom: 306px;
