--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1165,6 +1165,13 @@ body.is-menu-open .mobile-menu-overlay {
   cursor: pointer;
   transition: all 0.2s ease;
 }
+.vacancies__content-item--list li:hover {
+  background-color: #566a84;
+  border-radius: 12px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: 100%;
+}
 .vacancies__content-item--list li.active {
   background-color: #566a84;
   border-radius: 12px;
@@ -1175,6 +1182,9 @@ body.is-menu-open .mobile-menu-overlay {
 .vacancies__content-item--list li.empty {
   color: #6f757e;
   cursor: default;
+}
+.vacancies__content-item--list li.empty:hover {
+  background-color: transparent;
 }
 .vacancies__content-item--list li:last-child {
   border-bottom: none;
