--- a/style/scss/sections/_vacancies.scss
+++ b/style/scss/sections/_vacancies.scss
@@ -120,6 +120,14 @@
 				cursor: pointer;
 				transition: all 0.2s ease;
 
+				&:hover {
+					background-color: $primary;
+					border-radius: $radius-xs-desktop;
+					font-weight: 400;
+					letter-spacing: 0;
+					line-height: 100%;
+				}
+
 				&.active {
 					background-color: $primary;
 					border-radius: $radius-xs-desktop;
@@ -131,6 +139,10 @@
 				&.empty {
 					color: $text-medium;
 					cursor: default;
+
+					&:hover {
+						background-color: transparent;
+					}
 				}
 
 				&:last-child {
