--- a/style/css/style.css
+++ b/style/css/style.css
@@ -575,7 +575,7 @@ body.is-menu-open .mobile-menu-overlay {
 .hero {
   position: relative;
   height: 941px;
-  background-color: #182230;
+  background-color: #0c1625;
   background-image: url("../../image/hero/hero-background.png");
   background-size: cover;
   background-position: center;
@@ -1820,6 +1820,48 @@ body.is-menu-open .mobile-menu-overlay {
   background-color: rgb(229.5, 229.5, 229.5);
 }
 
+/* ========================================= Wide Display (1440px) ========================================= */
+@media (min-width: 1440px) {
+  .hero {
+    background-image: url();
+    background-color: transparent;
+  }
+  .hero::after {
+    content: "";
+    background-image: url("../../image/hero/substract.png");
+    background-repeat: repeat-x;
+    background-position: bottom center;
+    background-size: auto;
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+  }
+  .hero::before {
+    content: "";
+    background-image: url("../../image/hero/hero-background-large.png");
+    background-repeat: repeat-x;
+    background-position: top center;
+    background-size: auto;
+    position: absolute;
+    z-index: -3;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+  }
+  .hero__container::before {
+    content: url("../../image/hero/soldier.png");
+    position: absolute;
+    z-index: -2;
+    width: 910px;
+    height: 852px;
+    bottom: 3%;
+    left: 51.3%;
+  }
+}
 /* ========================================= Tablet (1024px) ========================================= */
 @media (max-width: 1024px) {
   #stages,
