--- a/style/scss/_media.scss
+++ b/style/scss/_media.scss
@@ -1,6 +1,59 @@
 @use "./abstracts/variables" as *;
 @use "./abstracts/mixins" as *;
 
+/* ========================================= Wide Display (1440px) ========================================= */
+
+@media (min-width: 1440px) {
+
+	// ===== HERO SECTION =====
+	.hero {
+		background-image: url();
+		background-color: transparent;
+	}
+
+	.hero::after {
+		content: '';
+		background-image: url('../../image/hero/substract.png');
+		background-repeat: repeat-x;
+		background-position: bottom center;
+		background-size: auto;
+		position: absolute;
+		z-index: -1;
+		width: 100%;
+		height: 100%;
+		bottom: 0;
+		left: 0;
+	}
+
+	.hero::before {
+		content: '';
+		background-image: url('../../image/hero/hero-background-large.png');
+		background-repeat: repeat-x;
+		background-position: top center;
+		background-size: auto;
+		position: absolute;
+		z-index: -3;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+	}
+
+	.hero__container::before {
+		content: url('../../image/hero/soldier.png');
+		// background-image: url('../../image/hero/soldier.png');
+		// background-repeat: no-repeat;
+		// background-position: bottom center;
+		// background-size: auto;
+		position: absolute;
+		z-index: -2;
+		width: 910px;
+		height: 852px;
+		bottom: 3%;
+		left: 51.3%;
+	}
+}
+
 /* ========================================= Tablet (1024px) ========================================= */
 
 @media (max-width: 1024px) {
