--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -12,6 +12,7 @@
 @use "./sections/sticker";
 @use "./sections/payments";
 @use "./sections/guarantees";
+@use "./sections/regions";
 @use "./sections/vacancies";
 @use "./sections/requirements";
 @use "./sections/training";
